[gd_scene load_steps=4 format=2]

[ext_resource path="res://image/enemyUFO.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0

[node name="enemy" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FiringPositions" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_enemy_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
